# skybox-tutorial

./: CMakeLists.txt  README.md  igme_config.yml  setup
src/: main.cpp  skyboxFrag.glsl
src/include/: CameraManager.h  InputManager.h  LightingManager.h  RenderManager.h  RenderObject.h  ResourceManager.h
src/source/: CameraManager.cpp  LightingManager.cpp  RenderObject.cpp  ResourceManager.cpp
